Animation & new asset

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 /[Aa]ssets/[Ss]amples/
 /[Aa]ssets/[Ss]amples.meta
+Assets/Scenes/Test_F.unity.meta
